# plotly_lvlos

./: .gitignore  Makefile  README.md  build.py  config.toml  core_data.csv  main.py  pyproject.toml  tables.html  test.py  todo
.github/workflows/: ci.yml
config/: config.toml  data_x_suffixes.toml  default_suffixes.toml  extra_data_point_suffixes.toml
data/: Gini_coefficient.csv  Gini_coefficient_raw(unused).csv
plotly_lvlos/: PlotlyLvlos.py
plotly_lvlos/config/: __init__.py  config_toml_dict_schema.py  load_config.py  loader.py  parse_config_toml_dict.py  sanitize_config_sql_identifiers.py  suffixes.py  validate_config_values.py  validate_files_exist.py
plotly_lvlos/core_data/: CoreDataBuilder.py  DataFileInfo.py  DataInfo.py  all_tables_decorator.py  build_matches_table.py  core_data_table_builder.py  csv_profiles.py  etl.py  extract_parse_transform_load.py  get_x_entities_from_matches.py  load_raw_tables.py  matches_table_decorator.py  overlap_columns.py  validate_entity_first_column.py  validate_overlap_columns.py
plotly_lvlos/errors/: errors_build_core_data.py  errors_config.py
plotly_lvlos/tests/config/: test_loader.py
plotly_lvlos/utils/: errors.py
tests/config/: conftest.py  test_load_config.py  test_loader.py  test_parse_config_toml_dict.py  test_validate_config_values.py  test_validate_files_exist.py
tests/config/scenarios/invalid/: invalid_config.toml
tests/config/scenarios/valid/: valid_config.toml
