[project]
name = "plotly-lvlos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "duckdb>=1.4.3",
    "flake8>=7.3.0",
    "numpy>=2.4.1",
    "plotly>=6.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "tomli-w>=1.2.0",
    "typeguard>=4.4.4",
]
