[project]
name = "plotly-lvlos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "duckdb>=1.4.3",
    "flake8>=7.3.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "rapidfuzz>=3.14.3",
    "ruff>=0.14.13",
    "tomli-w>=1.2.0",
    "typeguard>=4.4.4",
]
